packages/typ/tests/fixtures/diagnostics/0927_gadt_witness_annotation_mismatch_07.ml.infer.expected
File "0927_gadt_witness_annotation_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0927_gadt_witness_annotation_mismatch_07 is not a valid module name.

File "0927_gadt_witness_annotation_mismatch_07.ml", line 5, characters 27-35:
5 | let _ : bool witness_eta = WInt_eta
                               ^^^^^^^^
Error: The constructor WInt_eta has type int witness_eta
       but an expression was expected of type bool witness_eta
       Type int is not compatible with type bool
