packages/typ/tests/fixtures/diagnostics/0927_gadt_witness_annotation_mismatch_07.ml
type _ witness_eta =
  | WInt_eta : int witness_eta
  | WBool_eta : bool witness_eta

let _ : bool witness_eta = WInt_eta
